Fixed small bug on settings-sidebar It had bug that when you click it on mobile screen, it will do nothing the first click. So it was kinda ignoring the click.

--- a/resources/sass/_materialize.scss
+++ b/resources/sass/_materialize.scss
@@ -3309,7 +3309,7 @@ button.btn-floating {
     opacity: 0;
     position: absolute;
     left: 0;
-    top: 57px !important;
+    top: 0;
     border-radius: 4px;
     border: solid 1px $mainLight;
     z-index: 9999;
